--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,20 @@
 @tailwind base;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Lausanne-Regular';
+  src: url('../assets/fonts/Lausanne-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lausanne-Regular', sans-serif;
   background-color: black;
 }
-
-
 
 @layer base {
   :root {
@@ -42,3 +46,5 @@ body {
   }
 
 }
+
+
